<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/picture_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp_10"
    android:background="@drawable/box_border"
    android:orientation="vertical"
    android:padding="@dimen/dp_15">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:text="@string/dialog_add_attachment_title"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/dialog_add_attachment_select_source_label"
        android:textColor="@color/color_grey_600"
        android:textSize="@dimen/sp_15" />

    <Button
        android:id="@+id/dialog_add_attachment_camera_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/dialog_add_attachment_camera_label"
        android:background="@drawable/button_gradient_ghost"
        android:textColor="@color/color_pink"/>

    <Button
        android:id="@+id/dialog_add_attachment_gallery_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/dialog_add_attachment_gallery_label"
        android:background="@drawable/button_gradient_ghost"
        android:textColor="@color/color_pink"/>
</LinearLayout>
