<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/color_grey_600"
                    app:hintTextAppearance="@style/MyAppearance">

                    <EditText
                        android:id="@+id/et_profile_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/txt_sa_name"
                        android:padding="@dimen/dp_7"
                        android:inputType="text"
                        android:textColor="@color/color_grey_800"
                        android:textColorHint="@color/color_grey_500"
                        android:textSize="@dimen/sp_15" />

                </com.google.android.material.textfield.TextInputLayout>                    </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginTop="@dimen/dp_7"
                android:background="@color/color_grey_800" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/color_grey_600"
                    app:hintTextAppearance="@style/MyAppearance">

                    <EditText
                        android:id="@+id/et_profile_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/title_user_profile_email"
                        android:padding="@dimen/dp_7"
                        android:textColor="@color/color_grey_800"
                        android:textColorHint="@color/color_grey_500"
                        android:textSize="@dimen/sp_15" />

                </com.google.android.material.textfield.TextInputLayout>                    </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginTop="@dimen/dp_7"
                android:background="@color/color_grey_800" />
            <LinearLayout
                android:id="@+id/lin_edit_user_profile_doe_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10"
                android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/color_grey_600"
                    app:hintTextAppearance="@style/MyAppearance">

                    <EditText
                        android:id="@+id/et_profile_doe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/title_user_profile_doe"
                        android:padding="@dimen/dp_7"
                        android:textColor="@color/color_grey_800"
                        android:textColorHint="@color/color_grey_500"
                        android:textSize="@dimen/sp_15"
                        android:focusable="false"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginTop="@dimen/dp_7"
                android:background="@color/color_grey_800" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/dp_7"
                android:layout_marginTop="@dimen/dp_12"
                android:layout_marginBottom="@dimen/dp_7">


                <RadioGroup
                    android:id="@+id/rg_profile_sex"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_user_profile_gender"
                        android:textSize="@dimen/dp_15"
                        android:textColor="@color/color_grey_600" />

                    <RadioButton
                        android:id="@+id/rb_profile_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimaryDark"
                        android:text="@string/title_user_profile_male"
                        android:checked="true"
                        android:textColor="@color/color_grey_600"
                        android:layout_marginLeft="@dimen/dp_10"/>

                    <RadioButton
                        android:id="@+id/rb_profile_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimaryDark"
                        android:text="@string/title_user_profile_female"
                        android:textColor="@color/color_grey_600" />

                </RadioGroup>
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginTop="@dimen/dp_7"
                android:background="@color/color_grey_800" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/color_grey_600"
                    app:hintTextAppearance="@style/MyAppearance">

                    <EditText
                        android:id="@+id/et_profile_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/title_user_profile_age"
                        android:padding="@dimen/dp_7"
                        android:textColor="@color/color_grey_800"
                        android:textColorHint="@color/color_grey_500"
                        android:textSize="@dimen/sp_15"
                        />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_10">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/color_grey_600"
                        app:hintTextAppearance="@style/MyAppearance">

                        <EditText
                            android:id="@+id/et_profile_blood"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/title_user_profile_blood"
                            android:padding="@dimen/dp_7"
                            android:textColor="@color/color_grey_800"
                            android:textColorHint="@color/color_grey_500"
                            android:textSize="@dimen/sp_15"
                            />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_edit_profile_supplier_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/color_grey_600"
                    app:hintTextAppearance="@style/MyAppearance">

                    <EditText
                        android:id="@+id/et_profile_supplier_shop_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/title_user_profile_supplier_shop"
                        android:padding="@dimen/dp_7"
                        android:textColor="@color/color_grey_800"
                        android:textColorHint="@color/color_grey_500"
                        android:textSize="@dimen/sp_15" />

                </com.google.android.material.textfield.TextInputLayout>                    </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginTop="@dimen/dp_7"
                android:background="@color/color_grey_800" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/color_grey_600"
                    app:hintTextAppearance="@style/MyAppearance">

                    <EditText
                        android:id="@+id/et_profile_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/title_user_profile_address"
                        android:padding="@dimen/dp_7"
                        android:textColor="@color/color_grey_800"
                        android:textColorHint="@color/color_grey_500"
                        android:textSize="@dimen/sp_15" />

                </com.google.android.material.textfield.TextInputLayout>                    </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/color_grey_800" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/color_grey_600"
                    app:hintTextAppearance="@style/MyAppearance">

                    <EditText
                        android:id="@+id/et_profile_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/txt_sa_phone"
                        android:padding="@dimen/dp_7"
                        android:inputType="phone"
                        android:textColor="@color/color_grey_800"
                        android:textColorHint="@color/color_grey_500"
                        android:textSize="@dimen/sp_15" />

                </com.google.android.material.textfield.TextInputLayout>                    </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginTop="@dimen/dp_7"
                android:background="@color/color_grey_800" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_10">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/color_grey_600"
                    app:hintTextAppearance="@style/MyAppearance">

                    <EditText
                        android:id="@+id/et_profile_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/title_user_profile_password"
                        android:padding="@dimen/dp_7"
                        android:inputType="textPassword"
                        android:textColor="@color/color_grey_800"
                        android:textColorHint="@color/color_grey_500"
                        android:textSize="@dimen/sp_15" />

                </com.google.android.material.textfield.TextInputLayout>                    </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height=".5dp"
                android:layout_marginTop="@dimen/dp_7"
                android:background="@color/color_grey_800" />

            <Button
                android:id="@+id/btn_profile_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@drawable/curv_shape_button_primary_bg"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:text="@string/title_user_profile_edit"
                android:textAllCaps="true"
                android:textColor="@color/whiteColor"
                android:textSize="@dimen/sp_15" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>